--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-BOT_TOKEN="123456:ABCdefGhIJklMNopQRsTUVwxYZ"
-DEFAULT_API_KEY="AIzaSyXXXXXX-YYYYY"
+BOT_TOKEN="8412257526:AAFocWqcTgowUAHqGzIrdP5dFWp9pNrNGgM"
+DEFAULT_API_KEY="AIzaSyDQleLNYRs7GDX5LsXGnRJuJPFCmAuocY4"
 OWNERS="123456789"
 FORCE_JOIN_CHANNEL=""
 USE_WEBHOOK="true"
