--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 BOT_TOKEN="8412257526:AAFocWqcTgowUAHqGzIrdP5dFWp9pNrNGgM"
 DEFAULT_API_KEY="AIzaSyDQleLNYRs7GDX5LsXGnRJuJPFCmAuocY4"
-OWNERS="123456789"
-FORCE_JOIN_CHANNEL=""
+OWNERS="7823195150"
+FORCE_JOIN_CHANNEL="https://t.me/homieupdates"
 USE_WEBHOOK="true"
 WEBHOOK_URL="https://your-deno-project.deno.dev/"
